goauto-k8s/environments/sandbox/jumpbox-access-daemonset-notused.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: db-access-route
  namespace: kube-system
  labels:
    k8s-app: db-access-route
spec:
  selector:
    matchLabels:
      name: db-access-route
  template:
    metadata:
      labels:
        name: db-access-route
    spec:
      containers:
      - image: "gcr.io/google-containers/pause:2.0"
        name: pause
      tolerations:
      # these tolerations are to have the daemonset runnable on control plane nodes
      # remove them if your control plane nodes should not run pods
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
